deploy/bm-inventory.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: bm-inventory
  namespace: REPLACE_NAMESPACE
spec:
  selector:
    matchLabels:
      app: bm-inventory
  replicas: 1
  template:
    metadata:
      labels:
        app: bm-inventory
    spec:
      containers:
        - name: bm-inventory
          resources:
            limits:
              cpu: 200m
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 400Mi
          image: REPLACE_IMAGE
          imagePullPolicy: Always
          ports:
            - containerPort: 8090
          volumeMounts:
            - name: route53-creds
              mountPath: "/.aws"
              readOnly: true
      volumes:
        - name: route53-creds
          secret:
            secretName: route53-creds
            optional: true
